@@ -19,6 +19,7 @@ save all evals = False
 autosave interval = 10
 create trial = best_1_bin
 errorbar level = 1.05
+allowed fom discrepancy = 1e-20
 
 [data commands]
 names = A Example; Default; Simulation
